fixed all lib tests (at least import + init)
FYI ! order matters in "exports" block in pkg.json !

--- a/tests/init-browser-esm-relative/index.html
+++ b/tests/init-browser-esm-relative/index.html
@@ -17,13 +17,19 @@
 		console.log('from local import:', Algonaut);
 
 		const algonaut = new Algonaut({
-			BASE_SERVER: import.meta.env.NCC_BASE_SERVER,
-			INDEX_SERVER: import.meta.env.NCC_INDEX_SERVER,
-			LEDGER: import.meta.env.NCC_LEDGER,
-			PORT: import.meta.env.NCC_PORT,
-			API_TOKEN: { [import.meta.env.NCC_API_TOKEN_HEADER]: import.meta.env.NCC_API_TOKEN }
+			nodeConfig: {
+				BASE_SERVER: import.meta.env.NCC_BASE_SERVER,
+				INDEX_SERVER: import.meta.env.NCC_INDEX_SERVER,
+				LEDGER: import.meta.env.NCC_LEDGER,
+				PORT: import.meta.env.NCC_PORT,
+				API_TOKEN: { [import.meta.env.NCC_API_TOKEN_HEADER]: import.meta.env.NCC_API_TOKEN }
+			}
 		});
 		console.log('algonaut', algonaut);
+
+		// gaction-test-1 acct - BJVIWIXUZYEEL2WGAPKVUGZIVWJ5DTFOROJZY5CBGL25WJIR74MFJP2QJU
+		const memo = 'abuse uphold tourist sadness deer seat apple spider taxi senior priority upset skirt slush under skirt globe retire damp sing beauty share crime abandon long';
+		algonaut.authWithMnemonic(memo);
 
 		// test api call
 		// algonaut.getAppInfo(49584323).then(bricksInfo => {
